k8s/obsidian/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: obsidian-deployment
  namespace: obsidian
spec:
  replicas: 1
  selector:
    matchLabels:
      app: obsidian
  template:
    metadata:
      labels:
        app: obsidian
    spec:
      securityContext:
        fsGroup: 1302
      containers:
        - name: obsidian
          image: lscr.io/linuxserver/obsidian:latest
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: config-storage
              mountPath: /config
            # The persistent volume for vaults
            - name: vault-storage
              mountPath: /vaults
            - name: shm
              mountPath: /dev/shm
      volumes:
        - name: config-storage
          nfs:
            server: 192.168.0.202
            path: /mnt/data/config/obsidian
        - name: vault-storage
          nfs:
            server: 192.168.0.202
            path: /mnt/data/contents/private/obsidian
        - name: shm
          emptyDir:
            medium: Memory
            sizeLimit: 1Gi
