k8s/obsidian/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: obsidian-service
  namespace: obsidian
  annotations:
    # This annotation forces the backend connection to use HTTP/1.1
    traefik.ingress.kubernetes.io/service.serverstransport: obsidian-http1-transport@kubernetescrd
    # This enables sticky sessions for this service.
    # traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
spec:
  selector:
    app: obsidian
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
