k8s/obsidian/04-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: obsidian-https-ingress
  namespace: obsidian
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`obsidian.localdev`)
      kind: Rule
      services:
        - name: obsidian-service
          port: 3000
  tls:
    secretName: obsidian-localdev-tls
